force-app/main/default/objects/Partner_Officer__c/Partner_Officer__c.object-meta.xml
<CustomObject>
    <description>Houses all Partner/Officer Relationships</description>
    <label>Partner/Officer</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Partner/Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners/Officers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>