force-app/main/default/objects/Partner_Officer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners/Officers</relationshipLabel>
    <relationshipName>Partners_Officers</relationshipName>
    <type>Lookup</type>
</CustomField>