force-app/main/default/objects/Partner_Officer__c/fields/CreditReportReceived__c.field-meta.xml
<CustomField>
    <fullName>CreditReportReceived__c</fullName>
    <inlineHelpText>None = NO PR
NA = Not Required
X = None
YR = For Review</inlineHelpText>
    <label>Credit Report Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>YR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>