force-app/main/default/objects/Partner_Officer__c/fields/fxCreditReportReceived__c.field-meta.xml
<CustomField>
    <fullName>fxCreditReportReceived__c</fullName>
    <formula>CASE(
CreditReportReceived__c
,

&quot;&quot;,

&quot;No PR&quot;,

&quot;NA&quot;,

&quot;Not Required&quot;,

&quot;X&quot;,

&quot;None&quot;,

&quot;YR&quot;,

&quot;For Review&quot;,

&quot;&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Report Received</label>
    <type>Text</type>
</CustomField>