force-app/main/default/objects/Partner_Officer__c/fields/PartnerOfficerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerOfficerName__c</fullName>
    <label>Partner/Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>