force-app/main/default/objects/Partner_Officer__c/fields/PositionHeld__c.field-meta.xml
<CustomField>
    <fullName>PositionHeld__c</fullName>
    <label>Position Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>